yew-functional-macro/tests/functional_macro/lifetime-props-param-fail.stderr
error: reference must not have life time
  --> $DIR/lifetime-props-param-fail.rs:10:17
   |
10 | fn comp(props: &'static Props) -> Html {
   |                 ^^^^^^^
